<resources>
    <string name="app_name">Stonk Tracker</string>
    <string name="nav_home_name">Home</string>
    <string name="nav_stats_name">Stats</string>
    <string name="nav_search_name">Search</string>
    <string name="nav_history_name">History</string>
    <string name="portfolio_pl">+250.65€ (+21.14%)</string>
    <string name="portfolio_worth">1,895.65€</string>
    <string name="button_buy">Buy</string>
    <string name="button_sell">Sell</string>
    <string name="button_save">Save</string>

    <string name="text_shares">Shares</string>
    <string name="text_date">Date</string>
    <string name="text_price_in">Price in $</string>
    <string name="text_fees_in">Fees in $</string>

    <string name="hint_shares">0.0</string>
    <!-- <string name="hint_date">Date</string> -->
    <string name="hint_price_in">0.0</string>
    <string name="hint_fees_in">0.0</string>

    <string name="transaction_history">Transaction history</string>
    <string name="transaction_new">New transaction</string>

    <string name="investments_text">Investments</string>
    <string name="investment_text">Investment</string>
    <string name="stats_text">Stats</string>
    <string name="about_text">About</string>
    <string name="overview_text">Overview</string>

    <string name="num_of_shares">Number of shares</string>
    <string name="value">Value</string>
    <string name="return_of_investment">Return</string>

    <string name="search">Search</string>

    <string name="prev_close">Previous close</string>
    <string name="range">52-week range</string>
    <string name="average_vol">Average volume</string>
    <string name="average_price">Average price paid</string>
    <string name="market_cap">Market cap</string>
    <string name="eps">EPS</string>
    <string name="pe_ratio">Price-to-earnings (P/E)</string>
    <string name="last_dividend">Dividend yield</string>
    <string name="beta">Beta</string>
    <string name="last_volume">Volume</string>

    <string name="stock_gains">Stonk gains</string>
    <string name="stock_value">Stonk values</string>
    <string name="sector_gains">Sector gains</string>
    <string name="sector_value">Sector value</string>
    <string name="stonk_stats">Stonk stats</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>

</resources>